Version 0.4.0~dev

	* Log requests like Apache's combined log format.
	* Add an HTTPResponse class to allow authentication error reason
	  improvements.
	* Return a 401 Unauthorized error when the request header doesn't
	  contain the authentication string.

Version 0.3.2 Released on 2011/09/30

	* looping.py: fix epoll detection.
	* binary_parser.py: allow our users not to provide a validating object.
	* BurstQueue: fix a bug in extend() in case the iterable is a
	  generator object.
	* Sources can now customise the size of the buffer passed to recv().

Version 0.3.1 Released on 2011/08/23

	* Added a --version command line switch.

Version 0.3.0 Released on 2011/07/12

	* Added a token-based (mod_auth_token-style) authorization handler.
	* Added reload capability.
	* Every client / source / relay now has an inactivity timeout.
	* UDP: delay source start until we've had at least a few packets
	  from the network.

Version 0.2.0 Released on 2011/05/24

	* Added graceful stop on SIGHUP.
	* Status handlers are now pluginised (similar to auth handlers).
	* Added a static file status handler.

Version 0.1.0 Released on 2011/05/24

	* Initial release.